@@ -207,7 +207,7 @@ class output_collector {
 		global $session;
 		$temp = $this->get_block_new_output();
 		$this->set_block_new_output(false);
-		if ($force || (isset($session['user']['superuser']) && $session['user']['superuser']) & SU_DEBUG_OUTPUT){
+		if ($force || (isset($session['user']['superuser']) && $session['user']['superuser'] & SU_DEBUG_OUTPUT)){
 			if (is_array($text)){
 				require_once("lib/dump_item.php");
 				$text = appoencode(dump_item($text),true);
